--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 
 <p>额……这个会是什么效果</p>
-<p>北京宜科赛奥公司、帕尼杰尔公司的刘环宇，公然造谣抹黑志愿军，被辟谣后，公然非法开盒辟谣者，并冒用辟谣者身份证号、实名、电话号，在推特、知乎等平台上大量散布谣言及反动言论，参见https://zhuanlan.zhihu.com/p/6175452884?utm_psn=1858242303132577792 </p>
+<p>北京宜科赛奥公司、帕尼杰尔公司的刘xx，公然造谣抹黑志愿军，被辟谣后，公然非法开盒辟谣者，并冒用辟谣者身份证号、实名、电话号，在推特、知乎等平台上大量散布谣言及反动言论，参见https://zhuanlan.zhihu.com/p/6175452884?utm_psn=1858242303132577792 </p>
 <ul>
   <li> <a href="https://www.zhihu.com/people/tyc-10-11">知乎</a> </li>
 </ul>
